# github-mcp-scraper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NEO4J_SETUP.md  README.md  RESULTS_SUMMARY.md  demo_neo4j.py  neo4j_schema.cypher  pyproject.toml  requirements.txt  test_scraper.py  test_tool_extraction.py  validate_neo4j_schema.py
.github/workflows/: ci.yml
mcp_scraper/: __init__.py  enhanced_models.py  enhanced_neo4j_graph.py  github_crawler.py  graph_analytics.py  main.py  models.py  neo4j_graph.py  registry_parser.py  relationship_tracker.py  scraper.py  tool_extractor.py  tool_extractor_fixed.py
